Migrated to Java 11 - Task #158